CHANGES
=======

* gh-sync: prevent double API fetch
* gh-sync: regular print out dir
* gh-sync: rework
* cli.command.templates.create_jobs: allow template lib dir to be configured
* app: prevent infinite recursion when copying from workspace into subdir
* gh-sync: use lowercase names
* README: CI & gh-sync notes
* remove .singularityrc
* chamberlain/repo: lowercase for all repo names
* AUTHORS & ChangeLog files
* commands/gh-sync: allow default params from config.json
* Makefile: rename CI target
* command/hooks: catch case where response from API is not expected
* requirements: bump pbr >= 1.0
* delete-hooks command
* github: delegate unknown methods to raw client
* log: add warn method
* Dockerfile: switch to alpine
* cli/command/templates.GenerateTemplatesCommand: add owner param
* cli.command.templates/gh-sync: allow multiple template args
* cli.command.templates/gh-sync: allow multiple template args
* cli/command/templates.gh-sync: remove requirement of org in app config
* github: allow passing in custom list of orgs
* jenkins/template: remove some really stupid logic
* cli/commands/templates: add repo_full_name into params
* gh-sync: readable project names
* application.Workspace: explicitly append template contents
* files: mode arg for write_file
* cli/command/templates: --api-url flag
* application: recognize github: {url: ...}
* github.Client: support other github API URLs
* cli.command.templates: gh-sync command
* application: split out lib copy logic, create_file -> write_template
* files.write_file: append. I might regret doing this
* cli.command.templates.OrgTemplatesCommand: repo_job_mapping no longer relies on parser
* application.Workspace: can copy single files
* git: util fxs to pull data from local git repos
* application: copy libs into workspace/templates/libs
* cli/command/libs.ImportTemplates: command to pool common templates
* application.Workspace: concept out lib directory
* cli/command/templates: general refactors, caching repo data